Updated .revealTextRight CSS to handle text jump in IE.  Fixes #3372

--- a/bin/core-files/css/C_Engine.css
+++ b/bin/core-files/css/C_Engine.css
@@ -1058,9 +1058,10 @@ ul.no-indent {
 }
 
 .revealTextRight{
-	float: right;
+	/*float: right;*/
 	right: 2px;
 	top: 5px;
+	left: 8px;
 }
 
 .revealLeft{
